force-app/main/default/objects/Owner__c/Owner__c.object-meta.xml
<CustomObject>
    <label>Propriétaire</label>
    <nameField>
        <displayFormat>OWN-{00000}</displayFormat>
        <label>Numéro de propriétaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propriétaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>