force-app/main/default/objects/Owner__c/fields/Additional_owner_address__c.field-meta.xml
<CustomField>
    <fullName>Additional_owner_address__c</fullName>
    <label>Adresse supplémentaire propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>