force-app/main/default/objects/Owner__c/fields/Apartment_number__c.field-meta.xml
<CustomField>
    <fullName>Apartment_number__c</fullName>
    <label>Numéro appartement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>