force-app/main/default/objects/Owner__c/fields/Cardinal_point_owner_address__c.field-meta.xml
<CustomField>
    <fullName>Cardinal_point_owner_address__c</fullName>
    <label>Point cardinal adresse propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>