force-app/main/default/objects/Owner__c/fields/Country_address_owner__c.field-meta.xml
<CustomField>
    <fullName>Country_address_owner__c</fullName>
    <label>Pays adresse propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>