force-app/main/default/objects/Owner__c/fields/Generic_code_for_owner_address__c.field-meta.xml
<CustomField>
    <fullName>Generic_code_for_owner_address__c</fullName>
    <label>Code générique adresse propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>