force-app/main/default/objects/Owner__c/fields/Initial_owner_date__c.field-meta.xml
<CustomField>
    <fullName>Initial_owner_date__c</fullName>
    <label>Date initiale propriétaire</label>
    <type>Date</type>
</CustomField>