force-app/main/default/objects/Owner__c/fields/Legal_name_of_owner__c.field-meta.xml
<CustomField>
    <fullName>Legal_name_of_owner__c</fullName>
    <label>Nom légal du propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>