force-app/main/default/objects/Owner__c/fields/Mailing_address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_address__c</fullName>
    <label>Adresse postale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>