force-app/main/default/objects/Owner__c/fields/Municipality_of_mailing_address__c.field-meta.xml
<CustomField>
    <fullName>Municipality_of_mailing_address__c</fullName>
    <label>Municipalité adresse postale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>