force-app/main/default/objects/Owner__c/fields/Owner_address_link_code__c.field-meta.xml
<CustomField>
    <fullName>Owner_address_link_code__c</fullName>
    <label>Code lien adresse propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>