force-app/main/default/objects/Owner__c/fields/Owner_first_name__c.field-meta.xml
<CustomField>
    <fullName>Owner_first_name__c</fullName>
    <label>Prénom du propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>