force-app/main/default/objects/Owner__c/fields/Owner_street_number__c.field-meta.xml
<CustomField>
    <fullName>Owner_street_number__c</fullName>
    <label>Numéro rue propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>