force-app/main/default/objects/Owner__c/fields/Part_of_owner_address__c.field-meta.xml
<CustomField>
    <fullName>Part_of_owner_address__c</fullName>
    <label>Partie adresse propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>