force-app/main/default/objects/Owner__c/fields/Part_of_the_apartment_number__c.field-meta.xml
<CustomField>
    <fullName>Part_of_the_apartment_number__c</fullName>
    <label>Partie numéro appartement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>