force-app/main/default/objects/Owner__c/fields/Postal_box_of_postal_branch__c.field-meta.xml
<CustomField>
    <fullName>Postal_box_of_postal_branch__c</fullName>
    <label>Boîte postale succursale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>