force-app/main/default/objects/Owner__c/fields/Postal_branch__c.field-meta.xml
<CustomField>
    <fullName>Postal_branch__c</fullName>
    <label>Succursale postale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>