force-app/main/default/objects/Owner__c/fields/Postal_code_of_mailing_address__c.field-meta.xml
<CustomField>
    <fullName>Postal_code_of_mailing_address__c</fullName>
    <label>Code postal adresse postale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>