force-app/main/default/objects/Owner__c/fields/Province_State_Address_Owner__c.field-meta.xml
<CustomField>
    <fullName>Province_State_Address_Owner__c</fullName>
    <label>Province/État adresse propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>