force-app/main/default/objects/Owner__c/fields/School_tax_status_of_owner__c.field-meta.xml
<CustomField>
    <fullName>School_tax_status_of_owner__c</fullName>
    <label>Statut taxe scolaire propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>