force-app/main/default/objects/Owner__c/fields/Street_name_owner_address__c.field-meta.xml
<CustomField>
    <fullName>Street_name_owner_address__c</fullName>
    <label>Nom rue adresse propriétaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>